--- a/scss/components/radio.scss
+++ b/scss/components/radio.scss
@@ -9,7 +9,7 @@
 
       &:before {
         content: "";
-        background: url("/img/icons/checkmark.svg") center center no-repeat;
+        background: url("../img/icons/checkmark.svg") center center no-repeat;
       }
     }
   }
